--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
   </head>
   <body>
-    <div class="card-container">
+    <main class="card-container" role="main">
       <div class="card">
         <img class="QR-code" src="./images/image-qr-code.png" alt="QR Code" />
         <div class="texts">
@@ -40,12 +40,12 @@
           </p>
         </div>
       </div>
-    </div>
-    <div class="attribution">
+    </main>
+    <footer class="attribution" role="contentinfo">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="https://mickael-o3o.github.io/">Mickael</a>.
-    </div>
+    </footer>
   </body>
 </html>
