--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
   </head>
   <body>
-    <main class="card-container" role="main">
+    <main class="card-container">
       <div class="card">
         <img class="QR-code" src="./images/image-qr-code.png" alt="QR Code" />
         <div class="texts">
