--- a/index.html
+++ b/index.html
@@ -29,23 +29,38 @@
     </style>
   </head>
   <body>
-    <main class="card-container">
-      <div class="card">
-        <img class="QR-code" src="./images/image-qr-code.png" alt="QR Code" />
-        <div class="texts">
-          <h1>Improve your front-end skills by building projects</h1>
-          <p>
+    <main class="p-main">
+      <article class="c-card">
+        <header>
+          <img
+            class="c-card__QR-code"
+            src="./images/image-qr-code.png"
+            alt="Frontend Mentor site's QR Code"
+          />
+        </header>
+        <div class="c-card__body">
+          <h1 class="c-card__title">
+            Improve your front-end skills by building projects
+          </h1>
+          <p class="c-card__description">
             Scan the QR code to visit Frontend Mentor and take your coding
             skills to the next level
           </p>
         </div>
-      </div>
+      </article>
     </main>
-    <footer class="attribution" role="contentinfo">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://mickael-o3o.github.io/">Mickael</a>.
+    <footer class="p-footer" role="contentinfo">
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a
+          href="https://github.com/mickael-o3o/QR-code-component-solution.git"
+          target="_blank"
+          >mickael-o3o</a
+        >.
+      </p>
     </footer>
   </body>
 </html>
