--- a/index.html
+++ b/index.html
@@ -16,17 +16,6 @@
     <link rel="stylesheet" href="main.css" />
 
     <title>Frontend Mentor | QR code component</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <main class="p-main">
@@ -36,6 +25,8 @@
             class="c-card__QR-code"
             src="./images/image-qr-code.png"
             alt="Frontend Mentor site's QR Code"
+            width="576px"
+            height="576px"
           />
         </header>
         <div class="c-card__body">
